Import corrections